Fixed chat message overflow issue & empty messages. Implemented modal component for chat page to clear history

--- a/app/styles/chat.module.css
+++ b/app/styles/chat.module.css
@@ -64,6 +64,7 @@
 }
 
 .messages span{
+    overflow-wrap: anywhere;
     max-width: 300px;
     padding: 20px;
     background-color: white;
@@ -80,7 +81,6 @@
 
 .flexBox{
     display: flex;
-    justify-content: space-between;
     flex-direction: row;
     align-items: center;
 }
@@ -102,6 +102,7 @@
 }
 
 .boxLeft{
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -164,8 +165,10 @@
 
 .navContainer {
     display: flex;
+    padding-top: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-bottom: 0.5rem;
 }
 
 .messageContainer {
@@ -189,4 +192,32 @@
 .sendIcon:active {
     color: #958DD4;
     font-size: 2rem;
+}
+
+.scrollTag {
+    position: sticky;
+    bottom: 0;
+}
+
+.buttonList {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+}
+.buttonList button {
+    border: none;
+    border-radius: 22px;
+    height: 2.5rem;
+    margin-bottom: 1rem;
+    box-shadow: 0px 4px 20px rgba(141, 134, 201, 0.49);
+}
+
+.clearBtn {
+    background: #958DD4;
+    color: white;
+}
+
+.leaveBtn {
+    background: #D48D96;
+    color: white;
 }
